can index blog and paginate it

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "A VCS CMS for Laravel",
     "keywords": [
         "Paride Azzari",
+        "azzarip",
         "laravel",
         "notacms"
     ],
