--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php": "^8.1",
         "illuminate/contracts": "^10.0",
+        "ralphjsmit/laravel-seo": "^1.4",
         "spatie/laravel-package-tools": "^1.14.0",
         "spatie/yaml-front-matter": "^2.0"
     },
